--- a/styles-conference/register.html
+++ b/styles-conference/register.html
@@ -1,27 +1,40 @@
 <!DOCTYPE html>
-	<html lang="en">
-		<head>
-			<meta charset="utf-8">
-			<title>Styles Conference</title>
-			<link rel="stylesheet" type="text/css" href="assets/stylesheets/main.css">
-		</head>
+<html>
+<head>
+  <meta charset="utf-8">
+  <title>Register</title>
+  <link rel="stylesheet" href="assets/stylesheets/main.css">
+</head>
+<body>
+<header>
+  <h1>
+    <a href="index.html">Styles Conference</a>
+  </h1>
+  <h3>August 24&ndash;26th &mdash; Chicago, IL</h3>
 
-		<body>
-			<h1>Register</h1>
-			
-		</body>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="speakers.html">Speakers</a>
+    <a href="schedule.html">Schedule</a>
+    <a href="venue.html">Venue</a>
+    <a href="register.html">Register</a>
+  </nav>
 
-		<footer>
-			<small>&copy; Styles Conference</small>
+  <section>
+    <h5>Register</h5>
+  </section>
 
-				<nav>
-					<a href="index.html">Home</a>
-					<a href="speakers.html">Speakers</a>
-					<a href="schedule.html">Schedule</a>
-					<a href="venue.html">Venue</a>
-					<a href="register.html">Register</a>
-				</nav>
+</header>
 
-		</footer>
-
-	</html>
+<footer>
+  <small>&copy; Styles Conference</small>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="speakers.html">Speakers</a>
+    <a href="schedule.html">Schedule</a>
+    <a href="venue.html">Venue</a>
+    <a href="register.html">Register</a>
+  </nav>
+</footer>
+</body>
+</html>
